Energy & Fuel consumption

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     }
 
     .carousel .item {
-      height: 600px;
+      height: 650px;
     }
     .carousel img {
       position: absolute;
@@ -319,7 +319,7 @@
 
                   
               </p>
-              <a class="btn btn-large btn-primary" href="/Dashboard1.html">Login</a>
+              <a class="btn btn-large btn-primary" href="/m2m_appchallenge/Dashboard1.html">Login</a>
             </div>
           </div>
         </div>
